--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>App name</title>
 </head>
 <body>
+<div class="root">
+    <div class="chart"></div>
+</div>
 <script src="/main.js"></script>
 </body>
 </html>
