feat: add second step

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div class="root">
     <div class="chart"></div>
+    <div class="legend"></div>
 </div>
 <script src="/main.js"></script>
 </body>
