feat: rewrite step three

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>App name</title>
 </head>
 <body>
+<div class="actions">
+    <label id="form" for="show-voronoi">
+        Show Voronoi diagram
+        <input type="checkbox" id="show-voronoi" disabled>
+    </label>
+</div>
 <div class="root">
     <div class="chart"></div>
     <div class="legend"></div>
