feat: rewrite step five

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 <div class="actions">
     <label id="form" for="show-voronoi">
-        Show Voronoi diagram
+        Показать разбиение Вороного
         <input type="checkbox" id="show-voronoi" disabled>
     </label>
+    <button class="reset-zoom-button">Сбросить зум</button>
 </div>
 <div class="root">
     <div class="chart"></div>
