feat/fix: some changes and improvements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>App name</title>
 </head>
 <body>
+<div class="header">
+    <h2 class="title">
+        Динамика средневзвешенных процентных ставок по кредитам, предоставленным юридическим и
+        физическим лицам, предприятиям и организациям в валюте РФ для регионов Центрального Федерального Округа
+    </h2>
+    <div class="preview"></div>
+</div>
 <div class="actions">
     <label id="form" for="show-voronoi">
         Показать разбиение Вороного
