--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 <div class="header">
     <h2 class="title">
-        Динамика средневзвешенных процентных ставок по кредитам, предоставленным юридическим и
-        физическим лицам, предприятиям и организациям в валюте РФ для регионов Центрального Федерального Округа
+        Dynamics of weighted average interest rates on credits extended to businesses
+        and individuals among the regions of the Central Federal district of Russia
     </h2>
     <div class="preview"></div>
 </div>
 <div class="actions">
     <label id="form" for="show-voronoi">
-        Показать разбиение Вороного
+        Show Voronoi diagram
         <input type="checkbox" id="show-voronoi" disabled>
     </label>
-    <button class="reset-zoom-button">Сбросить зум</button>
+    <button class="reset-zoom-button">Reset zoom</button>
 </div>
 <div class="root">
     <div class="chart"></div>
